# DepthAiAndroidToolbox

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle  setupOpenCV.sh
.github/: dependabot.yml
.github/workflows/: android-ci.yml  android-release.yml
app/: build.gradle
app/src/androidTest/java/com/os/depthaiandroidtoolbox/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cvDaiUtils.cpp  cvDaiUtils.h  mainScreen.cpp  mainScreen.h  native-lib.cpp  ndklogger.h
app/src/main/java/com/os/depthaiandroidtoolbox/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/os/depthaiandroidtoolbox/initializer/: TimberInitializer.kt
app/src/main/java/com/os/depthaiandroidtoolbox/ui/main/: MainScreen.kt
app/src/main/java/com/os/depthaiandroidtoolbox/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/os/depthaiandroidtoolbox/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
